# colgm

./: .gitattributes  .gitignore  README.md  TODO  makefile  o.txt
.github/workflows/: ci.yml  release.yml
bootstrap/: CMakeLists.txt  README.md  colgm.h  lexer.cpp  lexer.h  main.cpp  makefile  misc.cpp  parse.cpp  parse.h  report.cpp  report.h
bootstrap/ast/: ast.cpp  ast.h  decl.cpp  decl.h  delete_disabled_node.cpp  delete_disabled_node.h  dumper.cpp  dumper.h  expr.cpp  expr.h  replace_defer.cpp  replace_defer.h  stmt.cpp  stmt.h  visitor.cpp  visitor.h
bootstrap/mir/: add_default_func.cpp  add_default_func.h  adjust_va_arg_func.cpp  adjust_va_arg_func.h  ast2mir.cpp  ast2mir.h  mir.cpp  mir.h  mir2sir.cpp  mir2sir.h  pass_manager.cpp  pass_manager.h  type_cast_number_pass.cpp  type_cast_number_pass.h  visitor.cpp  visitor.h
bootstrap/package/: package.cpp  package.h
bootstrap/parse/: parse.cpp  parse.h
bootstrap/sema/: context.cpp  context.h  enum.h  func.cpp  func.h  primitive.h  regist_pass.cpp  regist_pass.h  reporter.cpp  reporter.h  semantic.cpp  semantic.h  struct.cpp  struct.h  symbol.cpp  symbol.h  tagged_union.cpp  tagged_union.h  type.cpp  type.h  type_resolver.cpp  type_resolver.h
bootstrap/sir/: adjust_va_arg_func.cpp  adjust_va_arg_func.h  context.cpp  context.h  control_flow.cpp  control_flow.h  debug_info.cpp  debug_info.h  delete_useless_label.cpp  delete_useless_label.h  detect_redef_extern.cpp  detect_redef_extern.h  mir2sir.cpp  mir2sir.h  pass_manager.cpp  pass_manager.h  primitive_size_opt.cpp  primitive_size_opt.h  remove_alloca.cpp  remove_alloca.h  remove_useless_block.cpp  remove_useless_block.h  replace_ptr_call.cpp  replace_ptr_call.h  replace_struct_ptr_call.cpp  replace_struct_ptr_call.h  simplify_cfg.cpp  simplify_cfg.h  sir.cpp  sir.h
bootstrap/src/: colgm.h  lexer.cpp  lexer.h  main.cpp  misc.cpp  parse.cpp  parse.h  report.cpp  report.h  semantic.cpp  semantic.h
bootstrap/src/ast/: ast.cpp  ast.h  decl.cpp  decl.h  dumper.cpp  dumper.h  expr.cpp  expr.h  stmt.cpp  stmt.h  visitor.cpp  visitor.h
bootstrap/src/code/: context.cpp  context.h  gen.cpp  gen.h  hir.cpp  hir.h  sir.cpp  sir.h  value.cpp  value.h
bootstrap/src/mir/: add_default_func.cpp  add_default_func.h  ast2mir.cpp  ast2mir.h  mir.cpp  mir.h  mir2sir.cpp  mir2sir.h  pass.cpp  pass.h  pass_manager.cpp  pass_manager.h  type_cast_number_pass.cpp  type_cast_number_pass.h  visitor.cpp  visitor.h
bootstrap/src/package/: package.cpp  package.h
bootstrap/src/pass/: add_default_func.cpp  add_default_func.h  add_default_main.cpp  add_default_main.h  native_type_convert.cpp  native_type_convert.h  pass.cpp  pass.h  pass_manager.cpp  pass_manager.h
bootstrap/src/sema/: basic.cpp  basic.h  context.cpp  context.h  func.h  regist.cpp  regist.h  regist_pass.cpp  regist_pass.h  reporter.h  resolver.cpp  resolver.h  semantic.cpp  semantic.h  struct.cpp  struct.h  symbol.cpp  symbol.h  type_resolver.cpp  type_resolver.h
bootstrap/src/sir/: add_default_func.cpp  add_default_func.h  context.cpp  context.h  delete_useless_label.cpp  delete_useless_label.h  detect_redef_extern.cpp  detect_redef_extern.h  pass.cpp  pass_manager.cpp  pass_manager.h  remove_alloca.cpp  remove_alloca.h  sir.cpp  sir.h  value.cpp  value.h
bootstrap/test/: assign.colgm  bitwise.colgm  branch.colgm  cmpnot.colgm  continue_break.colgm  enum_test.colgm  for_test.colgm  func.colgm  generic.colgm  hello.colgm  initializer.colgm  local.colgm  match.colgm  negative.colgm  self-ref-test.colgm  string.colgm  to_str.colgm  type_convert.colgm  verify.colgm  void_return.colgm
bootstrap/test/test_lib/: data.colgm  libc.colgm
colgm-bootstrap/: CMakeLists.txt  README.md  makefile
colgm-bootstrap/src/: codegen.cpp  codegen.h  colgm.h  err.cpp  err.h  error.cpp  error.h  lexer.h  main.cpp  misc.cpp  parse.cpp  parse.h  semantic.cpp  semantic.h
colgm-bootstrap/test/: branch.colgm  func.colgm  hello.colgm  main.colgm  to_str.colgm  use_test.colgm  verify.colgm
doc/guide/: compiler_library_reference.md  defer.md  defer.zh.md  library_reference.md  std_library_reference.md  tagged_union.md  tagged_union.zh.md  tutorial.md  tutorial.zh.md  tutorial_zh.md
doc/llvm-example/: size.ll
doc/spec/: code_style.md  defer.md  func_ptr.md  lambda.md  ref_type.md  tagged_union.md  tagged_union_new.md  tuple.md
example/: example.colgm  example.nas  mandelbrot.colgm
example/pic/: mandelbrot.colgm
example/socket/: tcp_example.colgm  udp_example.colgm
llvm-test/: makefile  malloc.ll  struct.ll
misc/: build.py  carriage_return_replace.py  cfg_dot.py  check_open_flag.cpp  code_shower.py  code_style_check.py  count_code_line.nas  detect_tail_space.py  memleak_check.py  pack.py  retry_push.nas  test.py  test_error.py  test_tcp_udp.py
misc/util/: exec.py
src/: README.md  cli.colgm  colgm.h  compiler.colgm  err.cpp  err.h  lexer.colgm  lexer.cpp  lexer.h  main.colgm  main.cpp  makefile  misc.colgm  package.colgm  parse.cpp  parse.h  parser.colgm  sema.colgm  test.colgm
std/: basic.colgm  dirent.colgm  errno.colgm  execinfo.colgm  fs.colgm  io.colgm  json.colgm  libc.colgm  list.colgm  map.colgm  math.colgm  os.colgm  pair.colgm  panic.colgm  ptr.colgm  queue.colgm  range.colgm  regex.colgm  result.colgm  set.colgm  socket.colgm  str.colgm  string_utils.colgm  sys.colgm  tcp.colgm  time.colgm  udp.colgm  utf8.colgm  vec.colgm
test/: align.colgm  array.colgm  array_type.colgm  assign.colgm  base64_test.colgm  bitwise.colgm  branch.colgm  cmpnot.colgm  complex_generics.colgm  const_fold.colgm  continue_break.colgm  defer.colgm  defer_destruct_order.colgm  enum_test.colgm  errno.colgm  example.colgm  for_iter.colgm  for_test.colgm  func.colgm  generic.colgm  generic_array.colgm  generic_embed.colgm  hello.colgm  initializer.colgm  json_test.colgm  list_dir.colgm  local.colgm  match.colgm  md5_test.colgm  negative.colgm  operator.colgm  ref_struct_field.colgm  ref_variable_assign.colgm  regex_test.colgm  report_const_changed.colgm  self-ref-test.colgm  self_ref_test.colgm  sleep.colgm  std_test.colgm  string.colgm  (+9 more)
(+239 files in other folders)
